--- a/index.html
+++ b/index.html
@@ -1,1 +1,129 @@
-"Hello World" 
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="../static/img/favicon-32x32.png" />
+    <!-- CSS 연결 -->
+    <link rel="stylesheet" href="../static/css/main.css"></link>
+    <title>자기소개</title>
+    <!-- 아이콘 추가 -->
+    <script src="https://use.fontawesome.com/releases/v5.2.0/js/all.js"></script>
+    <!-- 부트스트랩 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<!-- menu-bar -->
+<nav class="menu-bar">
+    <div class = "index">
+        <!-- 프로필 이미지 -->
+        <div class = "img">
+            <img id="profile-img" src ="../static/img/내%20사진1.jpg" alt="프로필사진">
+        </div>
+        <br>
+        <!-- 목차 내용 -->
+        <h3 class="click">ABOUT ME</h3>
+        <h3 class="click">MY FAVORITE</h3>
+        <h3 class="click">TO ME</h3>
+    </div>
+</nav>
+<section class="about">
+    <!-- 이름 -->
+    <div class="name">
+        <h3>📖 ABOUT ME</h3>
+        <p><span style="color: #2B3856;">김승일(SEUNG IL)</span></p>
+        <!-- 기본 정보 -->
+        <div class="contacts">
+            <br>
+            <p>🎂1996.05.11</p>
+            <p>📧flykim5115@gmail.com</p>
+        </div>
+    </div>
+    <!-- Social-icons -->
+    <footer class="social-icons">
+        <a class="social-icon" href="https://kingseungil.tistory.com/"><i class="fab fa-blogger fa-4x"></i></a>
+        <a class="social-icon" href="https://github.com/kingseungil"><i class="fab fa-github fa-4x"></i></a>
+        <a class="social-icon" href="https://instagram/kingseungil"><i class="fab fa-instagram fa-4x"></i></a>
+    </footer>
+    <br><br>
+    <!-- 소개글 -->
+    <article class="main-introduction">
+        <p style="font-size: 20px">안녕하세요! 내일배움캠프 4기 김승일입니다.<br>
+            전기전공을 하다가 코딩에 흥미를 느껴 개발자라는 직업에 도전하게 되었습니다.<br>
+            원래 자바를 공부했었는데 자바스크립트의 매력에 빠지게됐고 풀스택개발자가 되는 것이 목표라서<br>
+            노드트랙에 합류하게 됐습니다!<br><br>
+            <span style="font-weight: bold; font-size: 20px"> 스크롤을 내리며 저를 알아가봐요!</span></p><br>
+            <hr class="hr-18">
+            <br><br>
+            <h2>MBTI 및 성격</h2>
+            <img src="../static/img/MBTI.jpg" style="float: left">
+                <p style="font-size: 20px">저는 내향적인 성격이며 이성적이고 현실주의자입니다.<br>
+                    재미없는 성격이지만 맡은 일에 책임감이 뛰어나며 항상 최고의 결과를 추구하는 완벽주의자 성격입니다<br>
+                    이러한 성격이 개발자에겐 장점이 된다고 생각합니다!<br><br>
+                    협업하는 과정에서 저의 스타일은 조화를 이루는 것입니다.<br>
+                    고집부리지않고 서로 맞춰나가면 최고의 결과가 나온다고 생각합니다.
+                </p><br><br>
+        <hr class="hr-18">
+    </article>
+    <br><br>
+</section>
+<section class="favorite">
+    <div class="content">
+        <h3>💞 MY FAVORITE</h3>
+        <p class="title"><span style="color: #2B3856; font-size: 55px; font-weight: 1">🏋️‍운동</span></p>
+        <p><span style="font-size: 20px;">운동한지 1년밖에 안된 헬린이지만 의자에만 앉아있는 취준생에겐 새로운 활력소입니다!<br>다들 운동하세요~</span></p>
+        <img src="../static/img/운동사진1.jpg">
+        <img src="../static/img/운동사진2.jpg">
+        <img src="../static/img/운동사진3.jpg">
+        <br></br>
+        <hr class="hr-18">
+        <p class="title"><span style="color: #2B3856; font-size: 55px; font-weight: 1">🐶‍ 강아지</span></p>
+        <p><span style="font-size: 20px;">우리집 막내 라니입니다~(15살..)<br>문 닫고 공부하고 있으면 열어달라고 맨날 긁어요!</span></p>
+        <img src="../static/img/라니1.jpg">
+        <img src="../static/img/라니2.jpg">
+        <img src="../static/img/라니3.jpg">
+        <img src="../static/img/라니5.jpg">
+        <br></br>
+        <hr class="hr-18">
+    </div>
+</section>
+<section class="to_me">
+    <div class="guest book">
+        <h3>📜GUEST BOOK</h3>
+        <div class="mypost">
+            <div class="form-floating mb-3">
+                <input type="text" class="form-control" id="author" placeholder="url">
+                <label for="name">닉네임</label>
+            </div>
+            <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here" id="contents"
+                      style="height: 100px"></textarea>
+                <label for="comment">내용</label>
+            </div>
+            <button onclick="save_comment()" type="button" class="btn btn-dark">방명록 남기기</button>
+        </div>
+        <div class="mycards" id="comment-list">
+            <div class="card">
+                <div class="card-body">
+                    <blockquote class="blockquote mb-0">
+                        <p>아무거나 쓰세요!!</p>
+                        <footer class="blockquote-footer">김승일</footer>
+                        <button onclick="delete_comment()" type="button" class="btn btn-dark">삭제</button>
+                    </blockquote>
+                </div>
+            </div>
+        </div>
+</section>
+<!-- JS 연결 -->
+<script src="../static/js/script.js"></script>
+</body>
+</html>
