--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <footer class="social-icons">
         <a class="social-icon" href="https://kingseungil.tistory.com/"><i class="fab fa-blogger fa-4x"></i></a>
         <a class="social-icon" href="https://github.com/kingseungil"><i class="fab fa-github fa-4x"></i></a>
-        <a class="social-icon" href="https://instagram/kingseungil"><i class="fab fa-instagram fa-4x"></i></a>
+        <a class="social-icon" href="https://instagram.com/kingseungil"><i class="fab fa-instagram fa-4x"></i></a>
     </footer>
     <br><br>
     <!-- 소개글 -->
