--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class = "index">
         <!-- 프로필 이미지 -->
         <div class = "img">
-            <img id="profile-img" src ="../static/img/내%20사진1.jpg" alt="프로필사진">
+            <img id="profile-img" src ="../static/img/사진.jpg" alt="프로필사진">
         </div>
         <br>
         <!-- 목차 내용 -->
